configuration data is added for android application build.

--- a/cfg/android-gradle/java-aspectj-logcat.cfg
+++ b/cfg/android-gradle/java-aspectj-logcat.cfg
@@ -4,4 +4,7 @@
 [thread] 3      
 [flowtype] 6    
 [methodname] 8 
-[ignore] static,synchronized,public,private,protected 
+[ignore] static,synchronized,public,private,protected,final
+[argseperator] ,,
+[retseperator] ,,
+[filtertag] SHERLOCK/PROFILING
